--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,23 @@
             <artifactId>javafx-fxml</artifactId>
             <version>LATEST</version>
         </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-graphics</artifactId>
+            <version>LATEST</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>LATEST</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>LATEST</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
     <build>
