--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,12 @@
             <version>LATEST</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>3.12.4</version>
+        </dependency>
+
 
     </dependencies>
     <build>
