--- a/pom.xml
+++ b/pom.xml
@@ -12,11 +12,11 @@
     <dependencies>
 
         <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
-        <dependency>
+        <!--<dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>2.8.6</version>
-        </dependency>
+            <version>LATEST</version>
+        </dependency>-->
 
 
         <!-- https://github.com/jeremyh/jBCrypt -->
@@ -56,6 +56,12 @@
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-graphics</artifactId>
             <version>23-ea+3</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10.1</version>
+            <scope>compile</scope>
         </dependency>
 
     </dependencies>
