--- a/pom.xml
+++ b/pom.xml
@@ -86,7 +86,19 @@
             <version>4.0.16-alpha</version> <!-- Or the latest version available -->
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.testfx</groupId>
+            <artifactId>testfx-core</artifactId>
+            <version>4.0.16-alpha</version>
+            <scope>compile</scope>
+        </dependency>
 
+
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-swing</artifactId>
+            <version>LATEST</version>
+        </dependency>
 
 
     </dependencies>
