Added javafx-swing to pom.xml in order to support some tests in JunitTest

--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,11 @@
         <!-- JAVAFX -->
         <dependency>
             <groupId>org.openjfx</groupId>
+            <artifactId>javafx-swing</artifactId>
+            <version>LATEST</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
             <version>LATEST</version>
         </dependency>
