--- a/pom.xml
+++ b/pom.xml
@@ -97,7 +97,12 @@
             <version>4.0.16-alpha</version> <!-- Or the latest version available -->
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-suite</artifactId>
+            <version>1.10.1</version>
+            <scope>test</scope>
+        </dependency>
 
 
     </dependencies>
